# pico-dev

./: .gitignore  here.txt  readme.md
pico-projects/: projects.txt
pico-projects/blink_led/: CMakeLists.txt  blink_led.c
pico-projects/i2c_test/: CMakeLists.txt  i2c_test.c
pico-projects/multicore/: CMakeLists.txt  multicore.c
pico-projects/serial_buffer/: CMakeLists.txt  serial_buffer.c
pico-projects/serial_input/: CMakeLists.txt  serial_input.c
pico-projects/serial_test/: CMakeLists.txt  serial_test.c
pico-projects/temp_sensor/: CMakeLists.txt  temp_sensor.c
